tests/neg/param-hello.stk
param newLine: String

def foo() =
  print
    "Hello, world!" + newLine

def bar() = foo

def main = bar    // error
